# depup

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: auto-bump.yml  ci.yml  docs.yml  publish.yml  python-publish.yml  release-drafter.yml
docs/: exit-codes.md  index.md  installation.md  policies.md  quickstart.md  roadmap.md  vision.md
docs/architecture/: overview.md
docs/ci/: github-actions.md
docs/commands/: scan.md  upgrade.md
docs/formats/: pipfile-lock.md  poetry-lock.md  pyproject.md  requirements.md
docs/reports/: json.md  markdown.md
search/: search_index.json
src/depup/cli/: main.py
src/depup/core/: environment_scanner.py  exceptions.py  models.py  parser.py  pipfile_lock_parser.py  poetry_lock_parser.py  upgrade_executor.py  version_scanner.py
src/depup/core/parsers/: declaration_parser.py
src/depup/reporting/: report_generator.py
src/depup/scanning/: code_scanner.py
src/depup/utils/: logging_config.py  render.py  report_utils.py  scan_utils.py  upgrade_planner.py  upgrade_utils.py
tests/: test_cli.py  test_parser.py  test_upgrade_executor.py  test_version_scanner.py  test_version_scanner_classify.py
