[project]
name = "depup"
version = "0.1.1"
description = "Dependency Upgrade Advisor: scan and safely upgrade Python project dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    { name = "Sai Saran Dammavalam", email = "saran30702@gmail.com" }
]

keywords = ["dependencies", "upgrade", "cli", "semver", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.12",
    "packaging>=24.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
depup = "depup.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
